@@ -232,6 +232,7 @@ Dialplan Functions
  * Added option to dialplan function CDR(), the 'f' option
    allows for high resolution times for billsec and duration fields.
  * FILE() now supports line-mode and writing.
+ * Added FIELDNUM(), which returns the 1-based offset of a field in a list.
 
 Dialplan Variables
 ------------------
